# sociol_bot

./: .gitignore  README.md  docker-compose.yaml  page.html  pyproject.toml
notebook/: 01_bgi_parsing.ipynb  02_analysis.ipynb  03_create_dataset.ipynb
src/load/: load_vectordb.py
src/models/: embedding_api.py  init_xinference.py  model_api.py  rerank_api.py
src/parsing/: parsing_content.py  parsing_links.py  parsing_pages.py
src/service/: context_search.py  service.py
